...
                                        <connections>
                                            <action selector="displayRecommendedAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6hP-jt-Jha"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="icw-Ti-151">
                                        <rect key="frame" x="257" y="247" width="46" height="30"/>
                                        <state key="normal" title="Button"/>
                                        <connections>
                                            <segue destination="HSj-ib-kgn" kind="presentation" id="Hvh-Cu-afc"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="1" green="1" blue="0.89411764705882357" alpha="1" colorSpace="calibratedRGB"/>
...
